0904/lion-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: lion-nodeport
spec:
  type: NodePort
  selector:
    app: lion
  ports:
    - port: 80
      targetPort: http
