0904/lion-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: lion
spec:
  selector:
    app: lion
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
