0904/lion-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lion
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: lion.example.com
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: lion-nodeport
                port:
                  number: 80
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: lion-nodeport-v2
                port:
                  number: 80
    - host: lion.fortune.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fortune-nodeport
                port:
                  number: 80
